// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcTable should have class ec-table-cell--text-center if type of column is icon 1`] = `
<div>
  <!---->
   
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Lorem
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
          <th
            class="ec-table-head__cell ec-table-head__cell--text-center"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Ipsum
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
        </tr>
      </thead>
       
      <tbody>
        <tr
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            foo
          </td>
          <td
            class="ec-table__cell ec-table__cell--text-center"
            data-test="ec-table__cell ec-table__cell--1"
          >
            bar
          </td>
        </tr>
        <tr
          data-test="ec-table__row ec-table__row--1"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            widgets
          </td>
          <td
            class="ec-table__cell ec-table__cell--text-center"
            data-test="ec-table__cell ec-table__cell--1"
          >
            doodads
          </td>
        </tr>
      </tbody>
       
      <!---->
    </table>
  </div>
</div>
`;

exports[`EcTable should not render if no props are supplied 1`] = `<!---->`;

exports[`EcTable should not render if not provided with an empty array of data 1`] = `<!---->`;

exports[`EcTable should not render if not provided with any data 1`] = `<!---->`;

exports[`EcTable should render as expected if provided with data and columns 1`] = `
<div>
  <!---->
   
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Lorem
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Ipsum
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
        </tr>
      </thead>
       
      <tbody>
        <tr
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            foo
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            bar
          </td>
        </tr>
        <tr
          data-test="ec-table__row ec-table__row--1"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            widgets
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            doodads
          </td>
        </tr>
      </tbody>
       
      <!---->
    </table>
  </div>
</div>
`;

exports[`EcTable should render as expected if provided with data and columns, with footer switched on 1`] = `
<div>
  <!---->
   
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Lorem
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Ipsum
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
        </tr>
      </thead>
       
      <tbody>
        <tr
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            foo
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            bar
          </td>
        </tr>
        <tr
          data-test="ec-table__row ec-table__row--1"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            widgets
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            doodads
          </td>
        </tr>
      </tbody>
       
      <tfoot
        class="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
            colspan="2"
          >
            <div
              class="ec-table-footer__contents"
            >
              <div
                class="ec-table-footer__details"
              >
                2 items.
              </div>
               
              <!---->
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable should render as expected if provided with data but no columns 1`] = `
<div>
  <!---->
   
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <!---->
       
      <tbody>
        <tr
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            foo
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            bar
          </td>
        </tr>
        <tr
          data-test="ec-table__row ec-table__row--1"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            widgets
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            doodads
          </td>
        </tr>
      </tbody>
       
      <!---->
    </table>
  </div>
</div>
`;

exports[`EcTable should render as expected if provided with data but no columns, and footer switched on 1`] = `
<div>
  <!---->
   
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <!---->
       
      <tbody>
        <tr
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            foo
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            bar
          </td>
        </tr>
        <tr
          data-test="ec-table__row ec-table__row--1"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            widgets
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            doodads
          </td>
        </tr>
      </tbody>
       
      <tfoot
        class="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
            colspan="2"
          >
            <div
              class="ec-table-footer__contents"
            >
              <div
                class="ec-table-footer__details"
              >
                2 items.
              </div>
               
              <!---->
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable should render as expected if provided with empty row and no columns, with footer switched on 1`] = `
<div>
  <!---->
   
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <!---->
       
      <tbody>
        <tr
          data-test="ec-table__row ec-table__row--0"
        />
      </tbody>
       
      <tfoot
        class="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
          >
            <div
              class="ec-table-footer__contents"
            >
              <div
                class="ec-table-footer__details"
              >
                1 item.
              </div>
               
              <!---->
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable should render as expected if provided with rows and columns, with footer switched on and the icon of the tooltip 1`] = `
<div>
  <!---->
   
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Lorem
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Ipsum
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
        </tr>
      </thead>
       
      <tbody>
        <tr
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            foo
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            bar
          </td>
        </tr>
        <tr
          data-test="ec-table__row ec-table__row--1"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            widgets
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            doodads
          </td>
        </tr>
      </tbody>
       
      <tfoot
        class="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
            colspan="2"
          >
            <div
              class="ec-table-footer__contents"
            >
              <div
                class="ec-table-footer__details"
              >
                2 items.
              </div>
               
              <div
                class="ec-table-footer__tooltip"
              >
                <svg
                  class="ec-table-footer__tooltip-icon ec-icon ec-has-tooltip"
                  data-original-title="null"
                  height="16"
                  width="16"
                >
                  <use
                    xlink:href="#ec-simple-info"
                  />
                </svg>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable should render as expected if provided with rows and columns, with footer switched on, the icon of the tooltip and the title given 1`] = `
<div>
  <div
    class="ec-table__title"
  >
    Title example
  </div>
   
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      aria-label="Title example"
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Lorem
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Ipsum
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
        </tr>
      </thead>
       
      <tbody>
        <tr
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            foo
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            bar
          </td>
        </tr>
        <tr
          data-test="ec-table__row ec-table__row--1"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            widgets
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            doodads
          </td>
        </tr>
      </tbody>
       
      <tfoot
        class="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
            colspan="2"
          >
            <div
              class="ec-table-footer__contents"
            >
              <div
                class="ec-table-footer__details"
              >
                2 items.
              </div>
               
              <div
                class="ec-table-footer__tooltip"
              >
                <svg
                  class="ec-table-footer__tooltip-icon ec-icon ec-has-tooltip"
                  data-original-title="null"
                  height="16"
                  width="16"
                >
                  <use
                    xlink:href="#ec-simple-info"
                  />
                </svg>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable should render slots as expected 1`] = `
<div>
  <!---->
   
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Lorem
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span>
                
          Ipsum
        
              </span>
               
              <!---->
               
              <!---->
            </span>
          </th>
        </tr>
      </thead>
       
      <tbody>
        <tr
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            foo
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            <p>
              bar
            </p>
          </td>
        </tr>
        <tr
          data-test="ec-table__row ec-table__row--1"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            widgets
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            <p>
              doodads
            </p>
          </td>
        </tr>
      </tbody>
       
      <tfoot
        class="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
            colspan="2"
          >
            <div
              class="ec-table-footer__contents"
            >
              <div
                class="ec-table-footer__details"
              >
                2 items.
              </div>
               
              <!---->
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable should render sorting as expected 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
          Lorem
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
          Ipsum
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted descending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            desc
          </span>
        </a>
      </span>
    </th>
  </tr>
</thead>
`;
